package User;

enum Action {
  LOGIN =  1;
  LOGOUT = 2;
  CREATE = 3;
  DELETE = 4;
  
  SET_PASSWORD = 10;
  SET_EMAIL    = 11;
  SET_ADDRESS  = 12;
}

// wiadomość do logowania do systemu!
//message Login{
//  required uint32 msgID = 1 [default = 1] ;
//  required string name =2;
//  required string password = 3;
//}

// Wiadomość do manipulacji użytkowanikiem
message UserAction{
  required uint32 msgType = 1 [default =2 ];
  required Action action = 2; // zmiana nazwy, emaila, logowanie itd
  optional string name = 3;
  optional string email = 4;
  optional string password = 5;
}

message error{
  required uint32 msgID = 1 [default = 15];

}

enum MessageType{
  USER_LOGIN_OK = 1;
}

message message{
  required uint32 msgID = 1[default = 14];
  required MessageType type =2; 

}